Fix hypothesis pain job input normalization